--- a/main.css
+++ b/main.css
@@ -33,8 +33,8 @@ div.line {
 }
 div.invisible
 {
+	display: none;
     position: fixed;
-    display: none;
     width: 360px;
     height: 120px;
     background: #FFFFBB;
@@ -45,7 +45,7 @@ div.invisible > input
 {
     width: 120px;
 }
-div.invisible > label
+div.invisible > span
 {
     width: inherit;
 }
@@ -56,6 +56,7 @@ table td {
     clear: both;
     min-height: 25px;
 }
-#footer > label {
+#footer > span {
     font-size: 0.8em;
-}
+}/*
+*/
