--- a/main.css
+++ b/main.css
@@ -25,26 +25,70 @@ table
 }
 #header
 {
-    padding: 36px;
-    min-height: 50px;
+    margin: 36px auto 12px auto;
+    padding: 36px auto 12px auto; ;
+min-height:50px;
 }
 #header > #nav
 {
-    background: #EFEFEF;
+    background: #F4F7FB;
     width: 100%;
-    padding: 36px;
-    min-height: 50px;
+    margin: 5px auto 5px auto;
+    padding: 5px auto 2px auto;
+    font-size: small;
+    line-height: normal;
+    min-height: 36px;
+    border-bottom: 1px solid #BCD2E6;
 }
-#header > #nav > a
+#header > #nav ul
 {
-    background: #EFEFEF;
-    width: 100%;
-    padding: 36px;
-    min-height: 50px;
+    margin: 0;
+    padding: 10px 10px 0 50px;
+    list-style: none;
+}
+#header > #nav li
+{
+    display: inline;
+    margin: 0;
+    padding: 0;
+}
+#header > #nav a
+{
+    float: left;
+    margin: 0;
+    padding: 0 0 0 4px;
+    text-decoration: none;
+}
+#header > #nav a span
+{
+    float: left;
+    display: block;
+    padding: 5px 15px 4px 6px;
+    color: #627EB7;
+}
+/* Commented Backslash Hack hides rule from IE5-Mac \*/
+#header > #nav a span
+{
+    float: none;
+}
+/* End IE5-Mac hack */
+#header > #nav a:hover span
+{
+    color: #11090A;
+}
+/* 鼠标移动到链接上 */
+#header > #nav a:hover
+{
+    background-position: 0% -42px;
+}
+#header > #nav a:hover span
+{
+    background-position: 100% -42px;
 }
 #main
 {
     min-height: 360px;
+    margin-bottom: 48px;
 }
 div.line
 {
